RESOLVED FIXED89490
CodeBlock::needsCallReturnIndices() is no longer needed.
https://bugs.webkit.org/show_bug.cgi?id=89490
Summary CodeBlock::needsCallReturnIndices() is no longer needed.
Mark Lam
Reported 2012-06-19 11:38:04 PDT
CodeBlock::needsCallReturnIndices() now always returns true. We should remove it and clean up the code.
Attachments
Fix (4.59 KB, patch)
2012-06-19 11:48 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2012-06-19 11:48:51 PDT
Geoffrey Garen
Comment 2 2012-06-19 12:17:05 PDT
Comment on attachment 148383 [details] Fix r=me
WebKit Review Bot
Comment 3 2012-06-19 14:06:23 PDT
Comment on attachment 148383 [details] Fix Clearing flags on attachment: 148383 Committed r120751: <http://trac.webkit.org/changeset/120751>
WebKit Review Bot
Comment 4 2012-06-19 14:06:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.