CodeBlock::needsCallReturnIndices() is no longer needed. https://bugs.webkit.org/show_bug.cgi?id=89490

Patch by Mark Lam <mark.lam@apple.com> on 2012-06-19
Reviewed by Geoffrey Garen.

* bytecode/CodeBlock.h:
(JSC::CodeBlock::needsCallReturnIndices): removed.
* dfg/DFGJITCompiler.cpp:
(JSC::DFG::JITCompiler::link):
* jit/JIT.cpp:
(JSC::JIT::privateCompile):

Canonical link: https://commits.webkit.org/107357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120751 268f45cc-cd09-0410-ab3c-d52691b4dbfc